<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activities.Detalle">
    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/Theme.AppCompat.Light" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:text="@string/Peso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Peso" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/tvEmpresa" app:layout_constraintEnd_toStartOf="@+id/Telefono"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toEndOf="@+id/edad" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.616"/>
    <TextView
            android:text="@string/Edad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edad" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="88dp"
            android:layout_marginStart="88dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/tvEmpresa"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvEmail" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="88dp"
            android:layout_marginStart="88dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/Email" app:layout_constraintEnd_toStartOf="@+id/tvDireccion"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.0"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTelefono"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="88dp" android:layout_marginRight="88dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/Telefono"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvPeso"
            app:layout_constraintEnd_toStartOf="@+id/tvTelefono"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toEndOf="@+id/tvEdad" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/Peso" app:layout_constraintHorizontal_bias="0.406"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvEdad"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="88dp" android:layout_marginStart="88dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/edad"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvDireccion" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="88dp"
            android:layout_marginRight="88dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/Direccion"/>
    <TextView
            android:text="@string/Direccdion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Direccion" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="88dp"
            android:layout_marginRight="88dp" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/tvTelefono"/>
    <TextView
            android:text="@string/Email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Email" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="136dp"
            android:layout_marginStart="88dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/tvEdad"
            app:layout_constraintEnd_toStartOf="@+id/Direccion" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.0"/>
    <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp" app:srcCompat="@drawable/foto_04"
            android:id="@+id/ivfoto"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.497"
            android:layout_marginTop="28dp" app:layout_constraintTop_toBottomOf="@+id/toolbar"/>
    <TextView
            android:text="Edinson Duran"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvNombre" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/ivfoto" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/Empresa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvEmpresa" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvNombre" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/Telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Telefono" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="88dp"
            android:layout_marginRight="88dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toBottomOf="@+id/tvEmpresa"/>
</android.support.constraint.ConstraintLayout>