<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".model.Nuevo">
    <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/Theme.AppCompat.Light" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:text="@string/Peso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Peso" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvEmpresa" app:layout_constraintEnd_toStartOf="@+id/Telefono"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toEndOf="@+id/edad" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.548"/>
    <TextView
            android:text="@string/Edad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edad" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="64dp"
            android:layout_marginStart="64dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tvEmpresa"/>
    <EditText
            android:hint="Edinson@gmail.com"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:id="@+id/tvEmail" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/Email" app:layout_constraintEnd_toStartOf="@+id/tvDireccion"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.0"
            android:inputType="textEmailAddress" android:singleLine="true"/>
    <EditText
            android:hint="312547854"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:id="@+id/tvTelefono"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" android:layout_marginRight="32dp" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/Telefono"
            android:singleLine="true" android:inputType="phone"/>
    <EditText
            android:hint="56kg"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:id="@+id/tvPeso"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/Peso"
            app:layout_constraintEnd_toStartOf="@+id/tvTelefono" android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp" android:singleLine="true" android:inputType="numberDecimal"/>
    <EditText
            android:hint="36 anos"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:id="@+id/tvEdad"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="32dp" android:layout_marginStart="32dp" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/edad"
            app:layout_constraintEnd_toStartOf="@+id/tvPeso" android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp" android:inputType="number" android:singleLine="true"/>
    <EditText
            android:hint="calle 16 # 6-36"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:id="@+id/tvDireccion" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/Direccion" android:singleLine="true"
            android:inputType="textPostalAddress"/>
    <TextView
            android:text="@string/Direccdion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Direccion" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="88dp"
            android:layout_marginRight="88dp" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/tvTelefono"/>
    <TextView
            android:text="@string/Email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Email" app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="136dp"
            android:layout_marginStart="88dp"
            android:layout_marginTop="10dp" app:layout_constraintTop_toBottomOf="@+id/tvEdad"
            app:layout_constraintEnd_toStartOf="@+id/Direccion" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.0"/>
    <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp" app:srcCompat="@drawable/foto_01"
            android:id="@+id/ivfoto"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.497"
            android:layout_marginTop="28dp" app:layout_constraintTop_toBottomOf="@+id/toolbar"/>
    <EditText
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:id="@+id/tvNombre" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/ivfoto"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:hint="Nombre" app:layout_constraintEnd_toStartOf="@+id/tvApellidos" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" app:layout_constraintHorizontal_bias="0.0"
            android:inputType="textPersonName"
            android:singleLine="true"/>
    <EditText
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:id="@+id/tvEmpresa" android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/tvNombre" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.498"
            android:hint="Empresa" android:inputType="text" android:singleLine="true"/>
    <TextView
            android:text="@string/Telefono"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Telefono" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="56dp"
            android:layout_marginRight="56dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tvEmpresa"/>
    <EditText
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/tvApellidos"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="32dp" android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@+id/ivfoto"
            android:hint="Apellidos" android:singleLine="true"/>

</android.support.constraint.ConstraintLayout>